[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/AI/AIController.gd" type="Script" id=1]
[ext_resource path="res://src/Base/Raycast_LineOfSight.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 450.0

[node name="AIController" type="Node2D"]
script = ExtResource( 1 )

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 1 )

[node name="AbilityTriggerInterval" type="Timer" parent="."]
process_mode = 0

[node name="RayCast_LineOfSight" parent="." instance=ExtResource( 2 )]

[node name="ActivateTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_DetectionRange_body_exited"]
[connection signal="timeout" from="AbilityTriggerInterval" to="." method="_on_AbilityTriggerInterval_timeout"]
[connection signal="timeout" from="ActivateTimer" to="." method="_on_ActivateTimer_timeout"]
